    dialog' fix.
58. If drawing standard buttons for sidebar buttons, then draw these as per toolbar
    buttons.
59. Dont use highlighted text for selected sidebar buttons if drawing as per toolbar
    buttons.
60. Better Agua gradients for large buttons.
61. Fix flat flat square in bottom right of scrollviews when using external scrollbars
    and background gradient.

0.69.2
------
1. Change 'Dont draw outer dark border' to 'Draw dark outer border'
2. Invalidate button background cache on settings change.
3. Fix Qt only compile - don't include kstandardirs.h!
4. Better postion of dots on slider handles.
5. If custom button colours have been defined for window buttons, use the same
   colours to colour dock widget buttons.
6. Add option to add extra padding to kwin titlebars.
7. Add vlc and smplayer to default list of KDE4 apps that needs manual
   saving of menubar state.

0.69.1
------
 1. Remove line beneath dock widget titles.
 2. Fix glow-style mouse over for combos with coloured buttons.
 3. Improve appearance of plastik style mouse-over on scrollbar sliders.
 4. Fix issue with faded menuitems when not rounding.
 5. Fix crash with Dolphin and square list view selection.
 6. Fix Qt only compile.
 7. Fix inner border of some buttons in OpenOffice.org
 8. Use QtCurve's icons for dock widget buttons.
 9. Use same button shape for dock widget buttons as per window buttons.
10. Don't draw shadows for window button icons if 'hover icons' is set to true.
11. Remove border around scrollbar in popup of combobox when not drawing popupmenu
    borders.
12. Use 'base' colour as background for scrollbars with thin groove, or flat buttons, that
    are part of a combo-box popup or are within qbstractscrollarea.

0.69.0
------
 1. Add option to control whether bottom tabs should have their gradient
    shades inverted.
 2. Config files now stored under $XDG_CONFIG_HOME/qtcurve (e.g. ~/.config/qtcurve)
 3. Fix some issue with 'flat' appearance.